# API-project-2020

./: .gitignore  CMakeLists.txt  README.md  a.out  a.txt  api-chan.py  api.c  api.out  api2.out  carmelo gay.txt  kek.txt  main.c  peppo  peppo.txt  peppo50.txt  quotes.txt  sol1000.txt  sol20.txt  sol50.txt  test.txt  test1000.txt  test20.txt  test50.txt  valgrind-out.txt  writeonly.c
public tests/AlteringHistory/: Altering_History_1_input.txt  Altering_History_2_output.txt
public tests/BulkReads/: Bulk_Reads_1_input.txt
public tests/RollerCoaster/: Rollercoaster_1_input.txt  Rollercoaster_1_output.txt
public tests/RollingBack/: Rolling_Back_1_output.txt  Rolling_Back_2_input.txt
public tests/WriteOnly/: Write_Only_1_input.txt
public-test/TimeForAChange/files/: Time_for_a_change_1_input.txt
public-tests/AlteringHistory/: Altering_History_1_output.txt  Altering_History_2_input.txt
public-tests/BulkReads/: Bulk_Reads_1_output.txt  Bulk_Reads_2_input.txt
public-tests/RollerCoaster/: Rollercoaster_2_input.txt  Rollercoaster_2_output.txt
public-tests/RollingBack/: Rolling_Back_1_input.txt  Rolling_Back_2_output.txt
public-tests/TimeForAChange/: Time_for_a_change_2_input.txt  Time_for_a_change_2_output.txt
public-tests/TimeForAChange/files/: Time_for_a_change_1_output.txt
public-tests/WriteOnly/: Write_Only_2_input.txt  Write_Only_2_output.txt
public-tests/WriteOnly/files/: Write_Only_1_output.txt  test.txt
tests/: sol10.txt  sol20.txt  test10.txt  test20.txt  test50.txt
